00. Exercises/ingress/manifest-fe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployement
  labels:
    app: apache
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata: 
      labels: 
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
