00. Exercises/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prod
  annotations:  
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.rshv.xyz
    http:
      paths:
      - path: /backend
        pathType: Prefix  
        backend: 
          service:
            name: backend-server
            port:
              number: 80
      - path: /frontend
        pathType: Prefix  
        backend:
          service:
            name: frontend-service
            port:
              number: 80
